omni/tests/goldens/types/unknown_type_01.omni
let value1:Mystery1 = 1
